--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -49,7 +49,7 @@ defaultFeaturedImage = "img/blowfish_logo.png" # used as default for featured im
   layout = "background" # valid options: page, profile, hero, card, background, custom
   # 在 hero 和 card 布局中使用的图像
   #homepageImage = "img/background.jpg" # used in: hero, and card
-  showRecent = true # 是否在主页展示最新文章列表。
+  showRecent = false # 是否在主页展示最新文章列表。
   showRecentItems = 5
   showMoreLink = false  # '显式更多' 按钮
   showMoreLinkDest = "/website-build" # '显式更多' 按钮指向的位置
