--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -79,6 +79,11 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
+        
+  #
+  deploy2:
+    runs-on: ubuntu-latest
+    steps:
       - name: Set up SSH access
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -87,48 +92,20 @@ jobs:
           SSH_USER: ${{ variables.SSH_USER }}
           DEPLOY_PATH: ${{ variables.DEPLOY_PATH }}
         run: |
-        # 使用ssh-keyscan获取服务器的SSH密钥指纹 
-        # 如果服务器端口不开放或者ssh-keyscan无法使用, 您可能需要手动添加服务器的公钥到known_hosts文件  
-        # 使用scp命令复制文件到服务器, 指定端口  
-        # 使用ssh命令在服务器上执行脚本或命令, 同样指定端口  
-          mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -p $SSH_PORT $SSH_HOST >> ~/.ssh/known_hosts
-          ssh -p $SSH_PORT $SSH_USER@$SSH_HOST "rm -rf ${{ vars.DEPLOY_PATH }}"
-          scp -P $SSH_PORT -r ./public "$SSH_USER@$SSH_HOST:$DEPLOY_PATH" 
-      - name: Clean up SSH keys  
-        if: always() # 确保即使在出错时也清理密钥  
-        # 如果手动添加了服务器的公钥,也需要删除known_hosts文件  
-        run: |  
-          rm -rf ~/.ssh/id_rsa  
-          rm -rf ~/.ssh/known_hosts
-
-  #
-  # deploy2:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Set up SSH access
-  #       env:
-  #         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-  #         SSH_HOST: ${{ variables.SSH_HOST }}
-  #         SSH_PORT: ${{ variables.SSH_PORT }}
-  #         SSH_USER: ${{ variables.SSH_USER }}
-  #         DEPLOY_PATH: ${{ variables.DEPLOY_PATH }}
-  #       run: |
-  #       # 使用ssh-keyscan获取服务器的SSH密钥指纹 
-  #       # 如果服务器端口不开放或者ssh-keyscan无法使用, 您可能需要手动添加服务器的公钥到known_hosts文件  
-  #       # 使用scp命令复制文件到服务器, 指定端口  
-  #       # 使用ssh命令在服务器上执行脚本或命令, 同样指定端口  
-  #         mkdir -p ~/.ssh
-  #         echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-  #         chmod 600 ~/.ssh/id_rsa
-  #         ssh-keyscan -p $SSH_PORT $SSH_HOST >> ~/.ssh/known_hosts
-  #         ssh -p $SSH_PORT $SSH_USER@$SSH_HOST "rm -rf ${{ vars.DEPLOY_PATH }}"
-  #         scp -P $SSH_PORT -r ./public "$SSH_USER@$SSH_HOST:$DEPLOY_PATH" 
-  #     - name: Clean up SSH keys  
-  #       if: always() # 确保即使在出错时也清理密钥  
-  #       # 如果手动添加了服务器的公钥,也需要删除known_hosts文件  
-  #       run: |  
-  #         rm -rf ~/.ssh/id_rsa  
-  #         rm -rf ~/.ssh/known_hosts
+        echo 'just test'
+      #   # 使用ssh-keyscan获取服务器的SSH密钥指纹 
+      #   # 如果服务器端口不开放或者ssh-keyscan无法使用, 您可能需要手动添加服务器的公钥到known_hosts文件  
+      #   # 使用scp命令复制文件到服务器, 指定端口  
+      #   # 使用ssh命令在服务器上执行脚本或命令, 同样指定端口  
+      #     mkdir -p ~/.ssh
+      #     echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+      #     chmod 600 ~/.ssh/id_rsa
+      #     ssh-keyscan -p $SSH_PORT $SSH_HOST >> ~/.ssh/known_hosts
+      #     ssh -p $SSH_PORT $SSH_USER@$SSH_HOST "rm -rf ${{ vars.DEPLOY_PATH }}"
+      #     scp -P $SSH_PORT -r ./public "$SSH_USER@$SSH_HOST:$DEPLOY_PATH" 
+      # - name: Clean up SSH keys  
+      #   if: always() # 确保即使在出错时也清理密钥  
+      #   # 如果手动添加了服务器的公钥,也需要删除known_hosts文件  
+      #   run: |  
+      #     rm -rf ~/.ssh/id_rsa  
+      #     rm -rf ~/.ssh/known_hosts
