--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -97,7 +97,7 @@ jobs:
       #   # 如果服务器端口不开放或者ssh-keyscan无法使用, 您可能需要手动添加服务器的公钥到known_hosts文件  
       #   # 使用scp命令复制文件到服务器, 指定端口  
       #   # 使用ssh命令在服务器上执行脚本或命令, 同样指定端口  
-      #     mkdir -p ~/.ssh
+          mkdir -p ~/.ssh
       #     echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
       #     chmod 600 ~/.ssh/id_rsa
       #     ssh-keyscan -p $SSH_PORT $SSH_HOST >> ~/.ssh/known_hosts
