--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -92,15 +92,15 @@ jobs:
           SSH_USER: ${{ vars.SSH_USER }}
           DEPLOY_PATH: ${{ vars.DEPLOY_PATH }}
         run: | 
-          echo "SSH_HOST: ${SSH_HOST}"  
-          echo "SSH_PORT: ${SSH_PORT}"  
-          echo "SSH_USER: ${SSH_USER}"  
-          echo "DEPLOY_PATH: ${DEPLOY_PATH}"
+          echo "SSH_HOST: ${{ vars.SSH_HOST }}"  
+          echo "SSH_PORT: ${{ vars.SSH_PORT }}"  
+          echo "SSH_USER: ${{ vars.SSH_USER }}"  
+          echo "DEPLOY_PATH: ${{ vars.DEPLOY_PATH }}"
           mkdir -p ~/.ssh
-          echo "${SSH_PRIVATE_KEY}" > ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh -p ${SSH_PORT} ${SSH_USER}@${SSH_HOST} "rm -rf ${DEPLOY_PATH}"
-          scp -P ${SSH_PORT} -r ./public "${SSH_USER}@${SSH_HOST}:${DEPLOY_PATH}" 
+          ssh -p ${{ vars.SSH_PORT }} ${{ vars.SSH_USER }}@${{ vars.SSH_HOST }} "rm -rf ${{ vars.DEPLOY_PATH }}"
+          scp -P ${{ vars.SSH_PORT }} -r ./public "${{ vars.SSH_USER }}@${{ vars.SSH_HOST }}:${{ vars.DEPLOY_PATH }}" 
 
       - name: Clean up SSH keys  
         if: always() # 确保即使在出错时也清理密钥  
