--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -92,7 +92,7 @@ jobs:
           SSH_USER: ${{ vars.SSH_USER }}
           DEPLOY_PATH: ${{ vars.DEPLOY_PATH }}
         run: | 
-          echo "this time will be success?"
+          echo "try again"
           echo "SSH_HOST: $SSH_HOST"  
           echo "SSH_PORT: $SSH_PORT"  
           echo "SSH_USER: $SSH_USER"  
