--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -86,7 +86,7 @@ jobs:
           pwd
           ls
           ls ../
-          echo "try again"
+          echo "try again..."
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
