--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -125,7 +125,7 @@ defaultFeaturedImage = "img/blowfish_logo.png" # used as default for featured im
   showViews = false
   showLikes = false
   showTableOfContents = true # 是否显示目录。
-  cardView = true  # 将列表展示为卡片容器。
+  cardView = false  # 将列表展示为卡片容器。
 
 # 术语
 [term]
